2011-11-19 Sat  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el: Adjust Tag descriptions of custom variables.
	Patch thanks to David Ross <H.David.Ross@gmail.com>.
	Add autoload stanzas to more variables.

2011-11-18 Fri  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-maintainer): Fix docstring.
	(defgroup epackage): Adjust docstring.
	(epackage--download-action-list): Adjust docstring.
	(epackage--depends-handling): Adjust docstring.
	(epackage--sources-list-and-repository-sync-flag): Adjust docstring.
	(epackage--url-epkg-template): New.
	(epackage--sources-file-list): Rename from
	`epackage--sources-file-list'.
	(epackage--sources-yellow-pages-url): Rename from
	`epackage--sources-list-url'.
	(epackage--sources-replace-table): Rename from
	`epackage--build-sources-list-replace-table'
	(epackage--info-mode-completions-license): Make `defconst'.
	Adjust docstring.

2011-11-16 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el
	(top level): add defvat for auto-revert-tail-mode.
	(epackage-auto-revert-mode-p): Rewrite.
	(epackage-turn-on-auto-revert-mode): Rewrite. Remove duplicate.
	(epackage-pkg-info-status-warnings): Add 3rd arg to `mapconcat'.
	(epackage-replace-regexp-in-buffer): Correct variable `string' to
	`str'.
	(epackage-combine-files): Correct `run-hook' to `run-hooks'.
	(epackage-autoload-write-autoload-files): New. Not yet implemented.
	(epackage--batch-ui-menu-actions): Update docstring.

2011-11-06 Sun  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (top-level): Correct autoload for `pcomplete-here'.
	Change `eval-when-compile' to 'eval-and-compile'.

2011-04-19 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-combine-files): Replace `run-hooks' with
	`dolist'.
	(epackage-sources-list-initialize): Correct
	`epackage--build-sources-list-hook'.
	(epackage-require-ssh): Correct arg URL.
	(epackage--install-download-hook): Rename. Was
	`epackage-install-download-hook'.